--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -246,7 +246,7 @@ dependencies {
     compile "com.android.support:support-v13:23+"
     compile "com.google.android.gms:play-services-gcm:9.0.2+"
     compile "me.leolin:ShortcutBadger:1.1.4@aar"
-    compile "com.android.support:support-v4:+"
+    compile "com.google.firebase:firebase-messaging:9.6.1"
     // SUB-PROJECT DEPENDENCIES END
 }
 
